--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-numpy
-pandas
-scikit-learn
-matplotlib
-seaborn
-opencv-python
-pillow
-tensorflow
-torch
-pytest
-qiskit
-qiskit-machine-learning
-qiskit_aer
-gunicorn
-monai
-flask
-pylatexenc
-python-dotenv
+numpy==2.1.3
+pandas==2.3.0
+scikit-learn==1.7.0
+matplotlib==3.10.3 
+seaborn==0.13.2
+opencv-python==4.11.0.86
+pillow==11.2.1
+tensorflow==2.19.0
+torch==2.6.0
+pytest==8.4.0
+qiskit==1.4.2
+qiskit-machine-learning==0.8.2
+qiskit-ibm-runtime==0.40.1
+qiskit_aer==0.17.1
+gunicorn==23.0.0
+monai==1.5.0
+flask==3.1.1
+pylatexenc==2.10
+python-dotenv==1.1.0
